Fixed test to clear DaoConfig